# Laskutin

./: .gitignore  CLAUDE.md  Dockerfile  README.md  build.sh  package.json  pnpm-lock.yaml  setup-dev-db.bat  setup-dev-db.ps1  setup-dev-db.sh
.claude/: settings.local.json
bank_barcode/: bank_barcode.py
bank_barcode/classes/: iban_checker.py
src/: App.vue  icons.css  main.ts  style.css  tsconfig.json  vite.config.ts
src-tauri/: .env  .gitignore  Cargo.toml  tauri.conf.json  temp.db
src-tauri/.sqlx/: query-7ce25788bc6ebe12c36ce5c16419a13f4285db8250ac997d8abdb9498a23d9c8.json  query-db8f19d75d335c63a57c68505ce91ecca7b2fc07bac8fa4900d548e9c9d13a68.json  query-dc84484ffd506bf0964ac6f0c1d63f556c82c514dc23858a964765209fe093d2.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_add_fields.sql  003_add_unique_constraints.sql  003_add_youth_member_age_limit.sql  004_update_member_type_constraints.sql
src-tauri/src/: commands.rs  database.rs  database_simple.rs  lib.rs  main.rs  models.rs
src/components/: AlertDialog.vue  ConfirmDialog.vue  Dashboard.vue  DateInput.vue  Households.vue  InvoicePDF.vue  Invoices.vue  Members.vue  MembershipFees.vue  OrganizationSettings.vue  PaymentDialog.vue  SuccessNotification.vue  TitleBar.vue
src/utils/: dateUtils.ts  pdfGenerator.ts  vectorPdfGenerator.ts
